# baseview

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
examples/: macos.rs  open_parented.rs  open_window.rs  windows_demo.rs  x11.rs
examples/open_parented/: Cargo.toml
examples/open_parented/src/: main.rs
examples/open_window/: Cargo.toml
examples/open_window/src/: main.rs
examples/plugin_clack/: Cargo.toml
examples/plugin_clack/src/: audio.rs  gui.rs  lib.rs  window_handler.rs
examples/render_femtovg/: Cargo.toml
examples/render_femtovg/src/: main.rs
examples/render_wgpu/: Cargo.toml
examples/render_wgpu/src/: main.rs  shader.wgsl
src/: clipboard.rs  context.rs  coordinates.rs  error.rs  event.rs  gl.rs  handler.rs  host.rs  key_code.rs  keyboard.rs  lib.rs  macos.rs  message.rs  mouse_cursor.rs  platform.rs  size.rs  tracing.rs  window.rs  window_builder.rs  window_info.rs  window_open_options.rs  window_state.rs  wrappers.rs  x11.rs
src/gl/: lib.rs  macos.rs  mod.rs  win.rs  x11.rs
src/gl/x11/: errors.rs  glx.rs
src/macos/: cursor.rs  keyboard.rs  mod.rs  subview.rs  view.rs  window.rs
src/platform/macos/: context.rs  cursor.rs  error.rs  gl.rs  keyboard.rs  mod.rs  view.rs  window.rs
src/platform/win/: drop_target.rs  error.rs  gl.rs  hook.rs  keyboard.rs  mod.rs  window.rs  window_state.rs
src/platform/x11/: cursor.rs  drag_n_drop.rs  error.rs  event_loop.rs  gl.rs  keyboard.rs  mod.rs  visual_info.rs  window.rs  window_shared.rs  window_thread.rs  window_thread_channel.rs  xcb_connection.rs  xcb_window.rs
src/platform/x11/xcb_connection/: get_property.rs
src/win/: cursor.rs  data_object.rs  drag.rs  drag_source.rs  drop_target.rs  dynamic_win_api.rs  event.rs  handle.rs  hook.rs  keyboard.rs  mod.rs  proc.rs  util.rs  win32_window.rs  window.rs
src/win/win32_window/: class.rs
src/wrappers/: appkit.rs  connection_poller.rs  glx.rs  win32.rs  xkbcommon.rs  xlib.rs
src/wrappers/appkit/: notification_center.rs  rwh_view.rs  timer.rs  view.rs  window.rs
src/wrappers/appkit/view/: implementation.rs
src/wrappers/win32/: cursor.rs  dpi.rs  h_instance.rs  h_window.rs  h_wnd.rs  library.rs  rect.rs  style.rs  user32.rs  uuid.rs  window.rs
src/wrappers/win32/window/: data.rs  dc.rs  event.rs  handle.rs  proc.rs  wgl.rs  window_class.rs
src/wrappers/xlib/: error_handler.rs  xlib_connection.rs  xlib_xcb.rs
src/x11/: cursor.rs  drag_n_drop.rs  event_loop.rs  handle.rs  keyboard.rs  mod.rs  opengl_util.rs  visual_info.rs  window.rs  x11_window.rs  xcb_connection.rs  xlib_xcb.rs
src/x11/xcb_connection/: get_property.rs
