[package]
name = "baseview"
version = "0.1.0"
authors = [
    "William Light <git@wrl.lhiaudio.com>",
    "Charles Saracco <crsaracco@gmail.com>",
    "Mirko Covizzi <mrkcvzz@gmail.com>",
    "Micah Johnston <micah@glowcoil.com>",
    "Billy Messenger <billydm@protonmail.com>",
    "Anton Lazarev <https://antonok.com>",
    "Joakim Frostegård <joakim.frostegard@gmail.com>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
    "Adrien Prokopowicz <prokopylmc@gmail.com>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Low-level windowing system geared towards making audio plugin UIs."
keywords = ["windowing", "audio", "plugin"]
categories = ["gui"]
repository = "https://github.com/RustAudio/baseview"

exclude = [".github"]
rust-version = "1.71"

[features]
default = []
opengl = [
    "uuid",
    "objc2-core-foundation/CFBundle",
    "objc2-app-kit/NSOpenGL",
    "objc2-app-kit/NSOpenGLView",
    "objc2-app-kit/objc2-open-gl"
]

[dependencies]
keyboard-types = { version = "0.6.1", default-features = false }
raw-window-handle = "0.5"

[target.'cfg(target_os="linux")'.dependencies]
x11rb = { version = "0.13.2", features = ["cursor", "resource_manager", "allow-unsafe-code", "dl-libxcb"] }
x11-dl = { version = "2.21" }
nix = "0.22.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "winuser", "windef", "minwindef", "guiddef", "combaseapi", "wingdi", "errhandlingapi", "ole2", "oleidl", "shellapi", "winerror"] }
uuid = { version = "0.8", features = ["v4"], optional = true }

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.4"
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFString", "CFUUID"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSEnumerator"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSApplication",
    "NSDragging",
    "NSEvent",
    "NSGraphics",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSTrackingArea",
    "NSView",
    "NSWindow",
    "objc2-core-foundation"
] }

[dev-dependencies]
rtrb = "0.2"
softbuffer = "0.3.4"

[workspace]
members = ["examples/render_femtovg"]

[lints.clippy]
missing-safety-doc = "allow"

[[example]]
name = "open_window"
test = true
doctest = true

[[example]]
name = "open_parented"
test = true
doctest = true

[package.metadata.docs.rs]
all-features = true
