[package]
name = "plugin_clack"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-plugin = "0.1.0"
clack-extensions = { version = "0.1.0", features = ["gui", "clack-plugin", "raw-window-handle_06"] }
baseview = { path = "../..", features = ["opengl"] }
softbuffer = "0.4.8"
raw-window-handle = "0.6.2"
