[package]
name = "render_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18"
baseview = {path = "../..", features = ["opengl"]}
pollster = "0.3.0"
bytemuck = {version = "1.15.0", features = ["derive"]}
